<resources>
    <string name="app_name">Background Recorder</string>

    <array name="video_quality">

        <item>HIGH</item>
        <item>MEDIUM (Recommended)</item>
        <item>LOW</item>
    </array>

    <string name="adUnitId">ca-app-pub-3259330710913387/9269953506</string>

    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Folder created</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="folder_name_empty">Folder name can\'t be empty</string>
    <string name="stop_recording_from_app_or_notification">Stop recording from app or notification</string>
    <string name="turn_screen_on_from_off_to_stop_recording">Turn screen on from off to stop recording</string>
    <string name="stop_recording_audio">STOP RECORDING AUDIO</string>
    <string name="stop_recording_video">STOP RECORDING VIDEO</string>
    <string name="more">MORE</string>
    <string name="less">LESS</string>
    <string name="hide_advanced_setting">HIDE ADVANCED SETTING</string>
    <string name="show_advanced_setting">SHOW ADVANCED SETTING</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="it_is_your_responsibility_to_use_this_app_in_compliance_with_local_and_federal_laws_n_you_must_not_invade_on_people_s_privacy_with_this_app">- It is your responsibility to use this app in compliance with local and federal laws. - You must not invade on people\'s privacy with this app.</string>
    <string name="we_hold_no_liability_if_you_choose_to_use_this_app_illegally_please_read_the_following_for_explanation_of_each_of_the_permissions_required_using_this_app_is_not_mandatory_if_you_disagree_you_must_uninstall_this_app_now">We hold no liability if you choose to use this app illegally. Please read the following for explanation of each of the permissions required. Using this app is not mandatory. If you disagree you must uninstall this app now.</string>
    <string name="_1_take_picture_and_video">1. Take picture and video</string>
    <string name="picture_and_video_is_taken_only_on_your_consent">Picture and video is taken only on your consent.</string>
    <string name="_2_access_to_storage">2. Access to storage</string>
    <string name="for_camera_to_run_in_background_without_preview_this_permission_is_required">For camera to run in background without preview, this permission is required.</string>
    <string name="if_device_is_restarted_service_will_be_started_to_resume_background_task">If device is restarted, service will be started to resume background task.</string>
    <string name="this_permission_is_required_by_ads_in_the_app_user_won_t_be_able_to_discard_ads_to_show_in_their_app_currently">This permission is required by ads in the app. User won\'t be able to discard ads to show in their app currently.</string>
    <string name="_3_draw_over_other_apps">3. Draw over other apps</string>
    <string name="the_recorded_video_or_the_image_captured_is_saved_to_storage_and_loaded_from_storage_while_viewing_in_gallery_user_may_delete_picture_or_video_taken_in_the_app_there_is_no_other_purpose_of_accessing_the_storage">The recorded video or the image captured is saved to storage and loaded from storage while viewing in gallery. User may delete picture or video taken in the app. There is no other purpose of accessing the storage.</string>
    <string name="_4_internet_permission">4. Internet permission</string>
    <string name="_5_run_at_startup">5. Run at startup</string>
    <string name="sharefile">shareFile</string>
    <string name="delete_file">Delete File</string>
    <string name="long_press_volume_down_button">LONG-PRESS VOLUME DOWN BUTTON</string>
    <string name="release_button_after_vibrate">Release button after vibrate</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="to_do_the_following">TO DO THE FOLLOWING</string>
    <string name="record_video">Record video</string>
    <string name="stop_recording_video_from_app_or_notification">Stop recording video from app or notification</string>
    <string name="capture_photo">Capture photo</string>
    <string name="from_front_camera">From Front Camera</string>
    <string name="from_back_camera">From Back Camera</string>
    <string name="record_audio">Record audio</string>
    <string name="about">ABOUT</string>
    <string name="share_this_app">SHARE THIS APP</string>
    <string name="rate_this_app">RATE THIS APP</string>
    <string name="stop_recording_audio_from_app_or_notification">Stop recording audio from app or notification</string>
    <string name="view_in_playstore">VIEW IN PLAYSTORE</string>
    <string name="camera_amp_audio_settings"><![CDATA[CAMERA & AUDIO SETTINGS]]></string>
    <string name="camera_shutter_sound">Camera shutter sound</string>
    <string name="while_image_capture_and_video_recording_start_stop">While image capture and video recording start/stop.</string>
    <string name="start_time">Start Time :-</string>
    <string name="_5_00_am">5:00 AM</string>
    <string name="notification_setting">NOTIFICATION SETTING</string>
    <string name="end_time">End Time :-</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="note_in_android_8_0_ongoing_notification_will_however_be_shown">Note: In android 8.0+, ongoing notification will however be shown</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="shows_test_button">Shows TEST button</string>
    <string name="schedule_service">Schedule service</string>
    <string name="if_you_wish_to_change_least_media_volume_to_0_check_this_box_if_long_pressing_volume_down_button_does_not_work_uncheck_this_box">If you wish to change least media volume to 0 check this box. If long-pressing volume down button does not work, uncheck this box.</string>
    <string name="when_you_use_this_app_your_least_media_volume_will_be_1_instead_of_0">When you use this app, your least media volume will be 1 instead of 0.</string>
    <string name="advanced_setting">ADVANCED SETTING</string>
    <string name="user_stops_from_app_or_notification">User stops from app or notification</string>
    <string name="show_notification">Show Notification</string>
    <string name="stop_recording_video_audio_when">Stop recording video | audio when</string>
    <string name="storage_location">Storage location</string>
    <string name="schedule_to_save_battery">SCHEDULE TO SAVE BATTERY</string>
    <string name="screen_is_turned_on_from_off">Screen is turned on from off</string>
    <string name="video_recording_quality">Video recording quality</string>
    <string name="always_active">Always active</string>
    <string name="video">Video</string>
    <string name="play">Play</string>
    <string name="service_auto_turn_off_time_range">SERVICE AUTO-TURN OFF TIME RANGE</string>
    <string name="schedule_button">schedule button</string>
    <string name="it_is_recommended_to_turn_this_feature_on_for_power_saving">It is recommended to turn this feature on for Power Saving.</string>
    <string name="setting">Setting</string>

    <string-array name="step_array">
        <item>12 AM</item>
        <item>1 AM</item>
        <item>2 AM</item>
        <item>3 AM</item>
        <item>4 AM</item>
        <item>5 AM</item>
        <item>6 AM</item>
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>

    </string-array>


</resources>
