<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nepdeveloper.backgroundcamera.activity.MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/adUnitId">

            </com.google.android.gms.ads.AdView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/ifdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/long_press_volume_down_button"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_button_after_vibrate"
                        android:textColor="@drawable/usage_hint"
                        android:textSize="15sp" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/stop_recording"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_recording" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/dofollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/to_do_the_following"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/dofollowing"
                            android:layout_toRightOf="@id/dofollowing"
                            android:background="#dddddd" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/record_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/record_video" />


                        <TextView
                            android:id="@+id/video_switch_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop_recording_video_from_app_or_notification"
                            android:textColor="@drawable/usage_hint"
                            android:textSize="15sp" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="#dddddd" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/capture_photo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="@string/capture_photo" />


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginStart="20dp"
                                android:layout_weight="0.5"
                                android:orientation="vertical">


                                <CheckBox
                                    android:id="@+id/capture_photo_front_camera"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/from_front_camera" />

                                <CheckBox
                                    android:id="@+id/capture_photo_back_camera"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="@string/from_back_camera" />
                            </LinearLayout>
                        </LinearLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="#dddddd" />

                        <RadioButton
                            android:id="@+id/record_audio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/record_audio" />

                        <TextView
                            android:id="@+id/audio_switch_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop_recording_audio_from_app_or_notification"
                            android:textColor="@drawable/usage_hint"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/more_btn"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more" />

            <LinearLayout
                android:id="@+id/more_opt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        app:cardBackgroundColor="@color/colorPrimary"

                        app:cardUseCompatPadding="true">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/rate_btn"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rate_this_app"
                            android:textColor="#ffffff" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        app:cardUseCompatPadding="true">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/share_btn"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/share_this_app" />

                    </android.support.v7.widget.CardView>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        app:cardUseCompatPadding="true">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/view_in_playstore"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_in_playstore" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        app:cardUseCompatPadding="true">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/about_btn"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:alpha="0.9"
        android:onClick="openGallery"
        android:src="@drawable/ic_gallery"
        app:fabSize="normal" />


</android.support.design.widget.CoordinatorLayout>