<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_label" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/btnNavUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/up_label"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_upward" />

        <ImageButton
            android:id="@+id/btnCreateFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/create_folder_label"
            android:padding="8dp"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/default_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnCreateFolder"
            android:layout_toStartOf="@id/btnCreateFolder"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_restore" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnNavUp"
            android:layout_toLeftOf="@id/default_dir"
            android:layout_toRightOf="@id/btnNavUp"
            android:layout_toStartOf="@id/default_dir"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtvSelectedFolderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/selected_folder_label"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/txtvSelectedFolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="start"
                    android:singleLine="true" />

            </HorizontalScrollView>

        </LinearLayout>


    </RelativeLayout>

    <View
        android:id="@+id/header_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/header"
        android:background="@color/track_checked" />

    <ListView
        android:id="@+id/directoryList"
        android:layout_below="@id/header_separator"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
